# privacy-ext

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
desktop/: README.md
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/scripts/: prepare-sidecar.sh
desktop/src-tauri/src/: lib.rs  main.rs
docs/: reserve-chrome-id.md
extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js  pipeline.js  popup.html  popup.js
extension-client/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  redact.js
extension-firefox/: README.md  ai-sites.js  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js  redact.css  redact.html
extension/models/gliner2-tokenizer/: config.json  tokenizer_config.json
scripts/: render-icons.sh  sync-firefox.sh
server/: Cargo.toml  run.sh  smoke-test.sh
server/src/: lib.rs  main.rs
server/vendor-gliner2-rs/: Cargo.toml  test_sentences.jsonl
server/vendor-gliner2-rs/examples/: probe_address.rs  test_benchmark.rs  test_benchmark_v2.rs  test_pii_anonymization_gate.rs
server/vendor-gliner2-rs/src/: error.rs  lib.rs  lib_v2.rs  processor.rs
site/: index.html  privacy.html
site/css/: system.css
