[package]
name = "clipcloak-desktop"
version = "0.5.0"
edition = "2021"
description = "ClipCloak — tray app for the on-device PII redaction daemon"
license = "MIT"

[lib]
name = "clipcloak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
clipcloak-server = { path = "../../server" }
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
